# yt-dl

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: style.css
src/: App.vue  main.ts  vuex.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/_locales/: index.ts  messages.ts
src/_locales/de/: messages.ts
src/_locales/en/: messages.ts
src/assets/database/: state.ts  supported.json
src/assets/styles/: mixins.scss  scrollbar.scss  style.scss  theme.scss  transitions.scss
src/assets/styles/theme/: accentColors.scss  darkMode.scss  lightMode.scss
src/components/: Menu.vue  Popover.vue  Url-overlay.vue
src/components/menu/: DropdownItem.vue  Menu.vue
src/router/: index.ts
src/store/: index.ts
src/views/: Home.vue  Settings.vue
